Closed Bug 602948 Opened 14 years ago Closed 14 years ago

ASSERTION: null node passed to nsHTMLEditUtils::IsMozBR and nsEditor::Tag when entering text in input controls focused by code or tabbing into them

Categories

(Core :: DOM: Editor, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b7

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

()

Details

(Keywords: assertion, regression)

Attachments

(1 file)

STR:

1. Load the test case.
2. Type something into the field.

###!!! ASSERTION: null node passed to nsHTMLEditUtils::IsMozBR: 'node', file /Users/ehsanakhgari/moz/mozilla-central/editor/libeditor/text/nsTextEditUtils.cpp, line 74
###!!! ASSERTION: null node passed to nsEditor::Tag(): 'aNode', file /Users/ehsanakhgari/moz/mozilla-central/editor/libeditor/base/nsEditor.cpp, line 3731
These assertions are benign in the sense that nothing bad happens at runtime (IsMozBR just returns false), but we should still fix them.
Attached patch Patch (v1)Splinter Review
Actually check possibleMozBRNode before passing it to IsMozBR.
Assignee: nobody → ehsan
Status: NEW → ASSIGNED
Attachment #481893 - Flags: review?(roc)
Attachment #481893 - Flags: approval2.0?
Attachment #481893 - Flags: review?(roc)
Attachment #481893 - Flags: review+
Attachment #481893 - Flags: approval2.0?
Attachment #481893 - Flags: approval2.0+
Whiteboard: [needs landing]
http://hg.mozilla.org/mozilla-central/rev/464e830c883f
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [needs landing]
Target Milestone: --- → mozilla2.0b8
Target Milestone: mozilla2.0b8 → mozilla2.0b7
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: