Bug 602948 - ASSERTION: null node passed to nsHTMLEditUtils::IsMozBR and nsEditor::Tag when entering text in input controls focused by code or tabbing into them; r,a=roc